# GenesisOS

./: .gdbinit  .gitignore  .gitmodules  .welcome_theme  CMakeLists.txt  DoxygenLayout.xml  Makefile  README.md  compile_commands.json  deps-container.sh  disk.img  doxygen.conf  dummy_disk.img  dummy_disk.img-w-files  dummy_disk.img.orig  gen_vectors.py
.github/workflows/: ci.yaml
docs/: 4-serial-ports.md  5-interrupts.md  6-x86-8259A-PIC.md  banner.txt  build_instructions.md  ide.md
genesis/drivers/: ata.c  ata.h  bmp.c  console.c  console.h  fat32.c  fat32.h  gfx.c  gfx.h  keyboard.c  keyboard.h  mouse.c  mouse.h  uart.c  uart.h  vconsole.c  vconsole.h
genesis/drivers/ff15/: CMakeLists.txt  CmakeLists.txt  diskio.c  diskio.h  ff.c  ffconf.h
genesis/drivers/gfx/: bmp.c  bmp.h  framebuffer.c  framebuffer.h  ssfn.h
genesis/kernel/: assert.c  assert.h  device.c  device.h  file.c  file.h  interrupts.c  interrupts.h  kentry.S  kernel.ld  kmain.c  kmalloc.c  kmalloc.h  linker.h  mb.c  mb.h  memlayout.h  mmu.h  pic.c  pic.h  proc.c  proc.h  sched.c  sched.h  string.c  string.h  syscall.c  syscall.h  types.h  vm.c  vm.h  x86.h
genesis/kernel/allocator/: CMakeLists.txt  dlmalloc.h  dlmalloc_config.h  stub.c
genesis/kernel/gfx/: gfx_math.c  gfx_math.h  gui.c  gui.h  nuklear.h  nuklear_rawfb.h  oof.h
genesis/kernel/gfx/nuklear/: CMakeLists.txt  nuklear.h  nuklear_font.c  nuklear_internal.h  nuklear_util.c  nuklear_util.h
genesis/userland/: CMakeLists.txt  init.c  prog.ld
genesis/userland/libs/: crt0.c  crt0.h  std.c  std.h
iso/targets/x86/boot/grub/: grub.cfg
meta/: build.sh  dbg.sh  rebuild.sh  run.bat  run.sh
meta/res/: banner.txt
scripts/: build.sh  copy_to_disk.sh  qemu.sh  run.sh
scripts/res/: out.sfn2
src/: ata.c  ata.h  console.c  console.h  fat32.c  fat32.h  file.c  interrupts.c  interrupts.h  kentry.S  kernel.ld  kmain.c  kmalloc.c  kmalloc.h  linker.h  memlayout.h  mmu.h  multiboot.h  pic.c  pic.h  proc.c  proc.h  sched.c  string.h  syscall.c  syscall.h  trap_entry.S  types.h  uart.c  uart.h  vm.c  vm.h  x86.h
src/drivers/: ata.h  console.c  console.h  fat32.c  fat32.h  uart.h
src/kernel/: file.h  interrupts.c  kmain.c  kmalloc.c  kmalloc.h  mmu.h  pic.c  pic.h  proc.c  proc.h  sched.h  string.c  string.h  syscall.c  trap_dispatcher.S  trap_entry.S  types.h  vm.h  x86.h
src/userland/: Makefile  init.asm  init.c  init.elf
src/userland/libs/: std.c  std.h
